force-app/main/default/objects/API_Log__c/API_Log__c.object-meta.xml
<CustomObject>
    <description>Audit log for all external API callouts made by DynamicDataRefreshBatch. Used for monitoring, debugging, and cost analysis.</description>
    <label>API Log</label>
    <nameField>
        <displayFormat>LOG-{0000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>