force-app/main/default/objects/API_Log__c/fields/API_Provider__c.field-meta.xml
<CustomField>
    <fullName>API_Provider__c</fullName>
    <label>API Provider</label>
    <length>50</length>
    <type>Text</type>
</CustomField>