force-app/main/default/objects/API_Log__c/fields/Batch_Mode__c.field-meta.xml
<CustomField>
    <fullName>Batch_Mode__c</fullName>
    <label>Batch Mode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>