force-app/main/default/objects/API_Log__c/fields/Estimated_Cost_USD__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost_USD__c</fullName>
    <description>Approximate USD cost of this API call based on published pricing. Used for cost attribution dashboards. Set by the service class at log time.</description>
    <label>Estimated Cost (USD)</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>