force-app/main/default/objects/API_Log__c/fields/Is_Rate_Limited__c.field-meta.xml
<CustomField>
    <fullName>Is_Rate_Limited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the API responded with HTTP 429 Too Many Requests. Use this field to identify providers that need Queueable-based deferred retry or quota increases.</description>
    <label>Rate Limited (429)</label>
    <type>Checkbox</type>
</CustomField>